# x2mdx

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml  shell.nix
.github/workflows/: ci.yml
diagrams/: x2mdx-architecture.mmd
examples/: canton-network-utilities-openapi.yaml
src/x2mdx/: __init__.py  cli.py  mintlify.py  output.py  presentation.py  reference_pages.py  render.py  templating.py
src/x2mdx/asyncapi/: __init__.py  lifecycle.py  models.py  render.py  snapshots.py
src/x2mdx/openapi/: serde.py  (+6 more)
tests/: parity.py  test_asyncapi.py  test_asyncapi_lifecycle_fixtures.py  test_characterization_outputs.py  test_characterization_preview.py  test_daml_json.py  test_daml_json_lifecycle_fixtures.py  test_jvm_docs.py  test_jvm_docs_lifecycle_fixtures.py  test_openapi.py  test_openapi_lifecycle_fixtures.py  test_openapi_published_fixtures.py  test_openrpc.py  test_openrpc_lifecycle_fixtures.py  test_protobuf.py  test_protobuf_lifecycle_fixtures.py  test_typedoc.py  test_typedoc_lifecycle_fixtures.py
tests/harness/: build_characterization_preview.py  characterization_cases.py  characterization_common.py  characterization_preview.py  generate_daml_standard_library_json.sh  ledger_api_openapi.py  refresh_characterization_asyncapi.py  refresh_characterization_daml_json.py  refresh_characterization_fixtures.py  refresh_characterization_jvm_docs.py  refresh_characterization_openapi.py  refresh_characterization_openrpc.py  refresh_characterization_protobuf.py  refresh_characterization_typedoc.py  refresh_ledger_api_openapi_fixtures.py  select_latest_lf_target.py
(+974 files in other folders)
