[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x2mdx"
version = "0.1.0"
description = "Convert reference-doc source artifacts into MDX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Jinja2>=3.1",
  "PyYAML>=6.0",
  "protobuf>=5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
x2mdx = "x2mdx.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"x2mdx" = ["templates/**/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
